Added to webpage.

--- a/bib.bib
+++ b/bib.bib
@@ -15,6 +15,7 @@ Encoding: Cp1252
 @STRING{cvgip = {Comput. Vision Graph. Image Process.}}
 @STRING{dover = {Dover}}
 @STRING{dsp = {Digital Signal Process.}}
+@STRING{dasp = {Defence App. Sig. Proc.}}
 @STRING{dukemathj = {Duke Math. J.}}
 @STRING{el = {Electron. Lett.}}
 @STRING{gmip = {Graph. Models Image Process.}}
@@ -28,6 +29,7 @@ Encoding: Cp1252
 @STRING{ieeetb = {IEEE Trans. Broadcasting}}
 @STRING{ieeetbe = {IEEE Trans. Biomed. Eng.}}
 @STRING{ieeetc = {IEEE Trans. Commun.}}
+@STRING{ieeetcom = {IEEE Trans. Commun.}}
 @STRING{ieeetce = {IEEE Trans. Consumer Elec.}}
 @STRING{ieeetcs = {IEEE Trans. Circuits Systems}}
 @STRING{ieeetim = {IEEE Trans. Instrument. Meas.}}
@@ -207,6 +209,19 @@ file = {ABATZOGLOU_ML_chirp.pdf}
   publisher=hup
 }
 
+@ARTICLE{AjtaiGeneratingHardInstancesOfLatticeProblems1996,
+ author = {M. Ajtai},
+ title = {Generating hard instances of lattice problems},
+ journal = {in {Proc.} 28th {ACM} {Symposium} on {Theory} of {Computing}},
+ year = {1996},
+ month = {May},
+ isbn = {0-89791-785-5},
+ pages = {99-108},
+ location = {Philadelphia, Pennsylvania},
+ doi = {http://doi.acm.org/10.1145/237814.237838},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
 
 @ARTICLE{AjtaiGeneratingHardInstancesOfLatticeProblems1996,
  author = {M. Ajtai},
@@ -247,6 +262,37 @@ file = {ABATZOGLOU_ML_chirp.pdf}
   isbn = {0387971270}
 }
 
+@article{Fisher_coor_coeff_circ_data_1983,
+     title = {A Correlation Coefficient for Circular Data},
+     author = {N. I. Fisher and A. J. Lee},
+     journal = {Biometrika},
+     volume = {70},
+     number = {2},
+month={Aug.},
+     pages = {327-332},
+     url = {http://www.jstor.org/stable/2335547},
+     abstract = {A coefficient to measure association between angular variables is discussed, its asymptotic distribution found, and its properties developed. Comparisons with other statistics in current use are made, and some examples given.},
+     language = {English},
+     year = {1983},
+     publisher = {Biometrika Trust},
+     copyright = {Copyright © 1983 Biometrika Trust},
+    }
+
+@article{Fisher_tsa_cd_1994,
+     title = {Time Series Analysis of Circular Data},
+     author = {N. I. Fisher and A. J. Lee},
+     journal = {{Journal of the Royal Statistical Society. Series B (Methodological)}},
+     volume = {56},
+     number = {2},
+     pages = {327-339},
+     url = {http://www.jstor.org/stable/2345903},
+     ISSN = {00359246},
+     abstract = {The paper considers the problem of modelling and analysing a time series of measurements which take the form of unit two-dimensional vectors. Several general classes of existing and new models are studied in terms of feasibility and flexibility. An approach is recommended which uses two of these classes, and which takes advantage of several standard time series algorithms that are available in modern software packages. An application is given to the analysis of a series of data on wind directions.},
+     language = {English},
+     year = {1994},
+     publisher = {Blackwell Publishing for the Royal Statistical Society},
+     copyright = {Copyright © 1994 Royal Statistical Society},
+    }
 
 @ARTICLE{An1986,
   author = {H. An and Z. Chen and E. J. Hannan},
@@ -296,6 +342,25 @@ pages = {2721-2732}}
   url = {http://citeseer.ist.psu.edu/arora93hardness.html}
 }
 
+@article{AnzinCoxeterCoveringn13n15_2003,
+title={On Lattice Covering Density for $n = 13$ and $n = 15$},
+author={M. M. Anzin},
+journal={Mathematical Notes},
+volume=79, 
+number=5, 
+year=2006, 
+pages={721–725}
+}
+
+@article{BambahSloane_covering_with_leech_1982,
+title={On a problem of Ry\v{s}kov concerning lattice covering},
+author={R. P. Bambah and N. J. A. Sloane},
+journal={Acta Arithm.}, 
+volume=42,
+year=1982, 
+pages={107–109}
+}
+
 @ARTICLE{Babai1986,
   author = {L. Babai},
   title = {On {Lov\'asz} lattice reduction and the nearest lattice point problem},
@@ -313,6 +378,53 @@ pages = {2721-2732}}
   volume = {42},
   pages = {412-413}
 }
+
+@INPROCEEDINGS{Ming_burst_mode_hamming_GPON_2008, 
+author={Ming Zeng and B. J. Shastri and N. Zicha and M. Vander Schueren and D. V. Plant}, 
+booktitle={Microsystems and Nanoelectronics Research Conference}, 
+title={5 Gb/s burst-mode clock phase aligner with (64, 57) Hamming codes for GPON applications}, 
+year=2008, 
+month={Oct.}, 
+pages={17 -20}, 
+keywords={Hamming codes;automatic phase acquisition;bit-error rate;burst-mode receiver;clock phase aligner;forward-error correction;gigabit passive optical networks;oversampling local oscillator;packet-loss ratio;phase picking algorithm;Hamming codes;clocks;error statistics;optical burst switching;optical fibre networks;optical receivers;}, 
+doi={10.1109/MNRC.2008.4683367},}
+
+@ARTICLE{Han_burstmode_AC_optical_2003, 
+author={S. Han and M. S. Lee}, 
+journal={Electronics Letters}, 
+title={{AC}-coupled burst-mode optical receiver employing {8B/10B} coding}, 
+year=2003, 
+month={Oct.}, 
+volume=39, 
+number=21, 
+pages={1527-1528}, 
+keywords={ 1.25 Gbit/s; 8B/10B coding; AC-coupled burst-mode optical receiver; Ethernet packet communication; encoding; optical fibre LAN; optical receivers;}, 
+doi={10.1049/el:20031008}, 
+ISSN={0013-5194}
+}
+
+@ARTICLE{Bellini_burst_mode_QPSK_1990, 
+author={S. Bellini  and C. Molinari and . Tartara}, 
+journal=ieeetcom, 
+title={Digital frequency estimation in burst mode {QPSK} transmission}, 
+year=1990, 
+month={July}, 
+volume=38, 
+number=7, 
+pages={959-961}, 
+keywords={2 Mbit/s;BER;QPSK;bit error rate;burst digital transmission;carrier reference phase recovery;coherent detection;common clock synchronization;digital frequency estimation;frequency offset;phase shift keying;symbol clock recovery;symbol timing;digital radio systems;phase shift keying;synchronisation;}, 
+doi={10.1109/26.57493}, 
+ISSN={0090-6778},}
+
+@INPROCEEDINGS{Kobayashi_carrier_freq_OFDM_burst_mode_2000, 
+author={H. Kobayashi}, 
+booktitle=procvtc, 
+title={A novel symbol frame and carrier frequency synchronization for burst mode OFDM signal}, 
+year=2000, 
+volume=3, 
+pages={1392-1396}, 
+keywords={AWGN;C/N;additive white Gaussian noise;burst frame;burst mode OFDM signal;carrier frequency offset estimation;carrier frequency synchronization;frequency selective fading environments;multipath fading;orthogonal frequency division multiplexing;symbol frame synchronization;symbol frame timing estimation;training symbols;wireless LAN communications systems;AWGN;OFDM modulation;fading channels;frequency estimation;multipath channels;synchronisation;timing;wireless LAN;}, 
+doi={10.1109/VETECF.2000.886325},}
 
 @ARTICLE{Barbarossa_analysis_of_PPS_1997,
   author = {S. Barbarossa and V. Petrone},
@@ -417,17 +529,103 @@ pages={401–412}
 @book{Billingsley1979_probability_and_measure,
   author = {P. Billingsley},
   title = {Probability and measure},
-	publisher={Wiley}, 
+  publisher=wiley, 
   year=1979
+}
+
+@article{Craig_ext_form_cyclotomy_1978,
+author={M. Craig},
+title={Extreme forms and cyclotomy},
+journal={Mathematika},
+volume=25,
+pages={44-56},
+year=1978
 }
 
 @book{Billingsley1999_convergence_of_probability_measures,
   author = {P. Billingsley},
   title = {Convergence of probability measures},
-	publisher={Wiley}, 
+publisher=Wiley, 
   year=1999,
 edition={2nd}
 }
+
+@ARTICLE{Franks_bit_carrier_sync_1980, 
+author={ L. Franks}, 
+journal={Communications, IEEE Transactions on}, 
+title={Carrier and Bit Synchronization in Data Communication--A Tutorial Review}, 
+year=1980, 
+month={Aug.}, 
+volume=28, 
+number=8, 
+pages={ 1107-1121}, 
+keywords={ APK communication; PAM communication; Synchronization;}, 
+doi={10.1109/TCOM.1980.1094775}, 
+ISSN={0090-6778}}
+
+@article{Morelli_OFDMA_sync_review_2007,
+author={M. Morelli and C. C. Jay Kuo and M. Pun}, 
+title={{Synchronization Techniques for Orthogonal Frequency Division Multiple Access (OFDMA): A Tutorial Review}},
+journal={Proceedings of the IEEE},
+volume=95,
+number=7,
+month={July},
+year=2007
+}
+
+@ARTICLE{Oerder_synch_square_circstat_2008, 
+author={M. Oerder and H. Meyr}, 
+journal=ieeetcom, 
+title={Digital filter and square timing recovery}, 
+year=1988, 
+month={May}, 
+volume=36, 
+number=5, 
+pages={605 -612}, 
+keywords={digital algorithm;digital data transmission;digital filter;free-running sampling oscillators;planar filtering method;synchronisation hangups;timing jitter;timing recovery circuits;digital communication systems;digital filters;filtering and prediction theory;synchronisation;timing circuits;}, 
+doi={10.1109/26.1476}, 
+ISSN={0090-6778},}
+
+@ARTICLE{Letzepis_scintilation_FSO_2009,
+author={N. Letzepis and A. {Guillen i Fabregas}},
+journal=ieeetcom, 
+title={Outage probability of the free-space optical channel with doubly stochastic scintillation},
+year=2009,
+month={Oct.},
+volume=57,
+number=10,
+pages={2899-2902},
+keywords={I-K distribution;MIMO channel;asymptotic outage probability;channel state information;doubly stochastic scintillation model;lognormal-Rice;multiple-input multiple-output free-space optical channel;pulse-position modulation;radio receiver;MIMO communication;optical communication;optical receivers;probability;pulse position modulation;radio receivers;stochastic processes;wireless channels;},
+doi={10.1109/TCOMM.2009.10.080078},
+ISSN={0090-6778},}
+
+
+@INPROCEEDINGS{Lijun_turbo_synch_PLL_1998, 
+author={L. Lijun and S. G. Wilson}, 
+booktitle=procicomms, 
+title={Synchronization of turbo coded modulation systems at low {SNR}}, 
+year=1998, 
+month={June}, 
+volume=1, 
+pages={428-432}, 
+keywords={QAM signal;bit error performance;carrier phase estimation;causal discrete-time synchronization structure;decision-directed structure;digital phase locked loop;low SNR;maximum likelihood estimation theory;symbol timing estimation;turbo coded modulation systems;turbo codes;concatenated codes;convolutional codes;digital phase locked loops;error statistics;maximum likelihood estimation;modulation coding;phase estimation;quadrature amplitude modulation;synchronisation;}, 
+doi={10.1109/ICC.1998.682888},}
+
+@ARTICLE{Baldoni_how_to_integrate_poly_over_simplex_2008,
+   author = {V. Baldoni and N. Berline and J. De Loera and M. K{\"o}ppe and 
+	M. Vergne},
+    title = {How to Integrate a Polynomial over a Simplex},
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {0809.2083},
+ primaryClass = "math.MG",
+ keywords = {Mathematics - Metric Geometry, Computer Science - Computational Complexity, Computer Science - Symbolic Computation},
+     year = 2008,
+    month = sep,
+   adsurl = {http://adsabs.harvard.edu/abs/2008arXiv0809.2083B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Borwein_Prouhet_Tarry_Escott_revisited_1994,
   author = {P. Borwein and C. Ingalls},
@@ -614,6 +812,30 @@ abstract={ An 8-state trellis code is described that uses a signal constellation
 doi={},
 ISSN={0018-9219}, }
 
+@ARTICLE{Chernov_nomoments_circle_fitting,
+title={Fitting circles to scattered data: parameter estimates have no moments},
+author={N. Chernov}
+}
+
+@article{Hasminskii_efficiency_with_no_moments_1983,
+author={R. Z. Hasminskii and I. A. Ibragimov}, 
+year=1983,
+title={On Asymptotic Efficiency in the Presence of an Infinitedimensional Nuisance Parameter},
+journal={Springer LNM},
+volume=1021, 
+pages={195–229}
+}
+
+@phdthesis{Brander_list_decoding_thesis, 
+author = {K. Brander}, 
+title = {Interpolation and List Decoding of Algebraic Codes},
+year = 2010,
+month = {Jan.},
+school = {Technical University of Denmark,
+Department of Mathematics},
+} 
+
+
 @phdthesis{Clarkson_thesis, 
 author = {I. V. L. Clarkson}, 
 title = {Approximation of linear forms by lattice with applications to signal processing},
@@ -793,7 +1015,7 @@ ISSN={0018-9448}
 @book{Chiueh_OFDM_recieverbook,
 author={T. Chiueh and P. Tsai},
 title={{OFDM} baseband receiver design for wireless communications},
-publisher={Wiley},
+publisher=wiley,
 year={2007}
 }
 
@@ -899,7 +1121,7 @@ school = {Trinity College Dublin}
 @article{Elton_circstat_radar_pulse_1994,
 author={S. D. Elton and D. A. Gray},
 title={The application of circular statistics to specific radar pulse train detection},
-journal={Proceedings EUSIPCO 1994},
+journal={Proceedings EUSIPCO},
 volume=1,
 pages={93-96},
 year=1994
@@ -909,7 +1131,7 @@ year=1994
 author = {S. D. Elton and B. J. Slocumb},
     title = {Robust Parameter Estimation for Periodic Point Process Signals Using Circular Statistics},
     year = 1996,
-journal={Proceedings EUSIPCO 1996}
+journal={Proceedings EUSIPCO}
 }
 
 @article{Fullermagfieldrevcircstat1996,
@@ -1072,6 +1294,22 @@ doi={10.1109/29.61538},
 ISSN={0096-3518}
 }
 
+@article{deBellescizePLL1932,
+author={H. de Bellescize},
+year=1932,
+month={June},
+title={La r\'{e}ception Synchrone},
+journal={L'Onde Electrique}, 
+issue=11,
+pages={230-240}
+}
+
+@book{WilliamPLL1998,
+author={W. F. Egan},
+year=1998, 
+title={Phase-Lock Basics},
+publisher=wiley
+}
 
 @ARTICLE{Edbauer1992,
   author = {F. Edbauer},
@@ -1104,7 +1342,7 @@ ISSN={0096-3518}
 @INCOLLECTION{Erdos_Lattice_points_1989,
 author = {P. Erd\"os and P. M. Gruber and J. Hammer},
 title = {Lattice Points},
-publisher = {Wiley},
+publisher = wiley,
 series = {{Pitman Monographs and Surveys in Pure and Applied Mathematics}},
 volume = {39},
   year = {1989},
@@ -1116,10 +1354,10 @@ volume = {39},
 title={Achieving $1/2 \log(1+{SNR})$ on the {AWGN} channel with lattice encoding and decoding},
 author={U. Erez and R. Zamir},
 journal=ieeetit,
-year={2004},
+year=2004,
 month={Oct.},
-volume={50},
-number={10},
+volume=50,
+number=10,
 pages={2293-2314},
 abstract={We address an open question, regarding whether a lattice code with lattice decoding (as opposed to maximum-likelihood (ML) decoding) can achieve the additive white Gaussian noise (AWGN) channel capacity. We first demonstrate how minimum mean-square error (MMSE) scaling along with dithering (lattice randomization) techniques can transform the power-constrained AWGN channel into a modulo-lattice additive noise channel, whose effective noise is reduced by a factor of √(1+SNR/SNR). For the resulting channel, a uniform input maximizes mutual information, which in the limit of large lattice dimension becomes 1/2 log (1+SNR), i.e., the full capacity of the original power constrained AWGN channel. We then show that capacity may also be achieved using nested lattice codes, the coarse lattice serving for shaping via the modulo-lattice transformation, the fine lattice for channel coding. We show that such pairs exist for any desired nesting ratio, i.e., for any signal-to-noise ratio (SNR). Furthermore, for the modulo-lattice additive noise channel lattice decoding is optimal. Finally, we show that the error exponent of the proposed scheme is lower bounded by the Poltyrev exponent.},
 keywords={ AWGN channels, channel capacity, channel coding, decoding, error statistics, lattice theory, least mean squares methods, linear codes, optimisation AWGN, Euclidean distance, MMSE, Poltyrev exponent, additive white Gaussian noise channel, channel capacity, decoding, dirty paper channel, dithering technique, encoding, error exponent, lattice code, minimum mean-square error, modulo-lattice transformation, mutual information maximization, nested code, power-constraint transformation, random lattice ensemble},
@@ -1127,15 +1365,36 @@ doi={10.1109/TIT.2004.834787},
 ISSN={0018-9448}
  }
 
-@Book{Gregory1969_collection_matrix_algorithms,
-  author = 	 {R. T. Gregory and D. L. Karney},
-  title = 	 {A collection of matricies for testing computational algorithms},
-  publisher = 	 {Wiley},
-  year = 	 {1969},
-  address = 	 {New York}
+@article{Nair_control_data_rate_contraints_2007,
+author={G. N. Nair and F. Fagnani and S. Zampieri and R. J. Evans},
+title={Feedback Control Under Data Rate Constraints: An Overview},
+journal={Proceedings of the IEEE},
+year = 2007,
+volume = 95,
+number = 1,
+month = {Jan.}
 }
 
+@Book{Gregory1969_collection_matrix_algorithms,
+  author = {R. T. Gregory and D. L. Karney},
+  title = {A collection of matricies for testing computational algorithms},
+  publisher =wiley,
+  year = 1969,
+  address ={New York}
+}
 
+@ARTICLE{Ali_doppler_satellites_1998, 
+author={I. Ali and N. Al-Dhahir and J. E. Hershey}, 
+journal=ieeetcom, 
+title={Doppler characterization for {LEO} satellites}, 
+year=1998, 
+month={Mar.}, 
+volume=46, 
+number=3, 
+pages={309-313}, 
+keywords={Doppler characterization;Doppler curve;Doppler-rate measurements;LEO satellites;algorithm;angular velocity;approximations;circular orbit;forward channel;great circle arc;low Earth orbit;maximum elevation angle;measured Doppler shift;mobile ground-based terminals;parameter estimation;satelite visibility duration;satellite communication;satellite trajectory;visibility window duration;Doppler measurement;Doppler shift;angular velocity;mobile satellite communication;parameter estimation;}, 
+doi={10.1109/26.662636}, 
+ISSN={0090-6778}}
 
 @article{Kovalevsky_image_morpho_thinning,
  author = {V. A. Kovalevsky},
@@ -1229,7 +1488,7 @@ file = {elkies_lattices_linear_codes.pdf}
 }
 
 @BOOK{Fisher1993,
-  title = {{Statistical analysis of cirular data}},
+  title = {{Statistical analysis of circular data}},
   publisher = {Cambridge University Press},
   year = {1993},
   author = {N. I. Fisher}
@@ -2265,7 +2524,7 @@ ISSN={1053-587X}
 @book{Mardia_directional_statistics,
   author = {K. V. Mardia and P. Jupp},
   title = {Directional Statistics},
- publisher = {Wiley},
+ publisher = wiley,
 year = 2000,
 edition = {2nd} 
 }
@@ -2367,6 +2626,13 @@ abstract={ Iterative decoding in the presence of unknown channel parameters requ
 keywords={ adaptive signal detection, computational complexity, error detection codes, iterative decoding, parameter estimation, polynomials LDPCC, adaptive symbol-by-symbol soft-decision algorithms, channel parameters, data sequence length, exact SbSSDM, exponential complexity, iterative decoding, low-density parity check, low-density parity-check codes, noncoherent detection, of iterative detection, parameter estimation, polynomial complexity, symbol-by-symbol soft decision metrics, time-varying carrier-phase offset},
 doi={10.1109/ICC.2002.997134} }
 
+@book{MoranMantonGroupRadar2003,
+authors={W. Moran and J. H. Manton},
+year={2003},
+title={Group Theory in Radar and Signal Processing},
+booktitle={Computational Noncommutative Algebra and Applications},
+publisher={Kluwer}
+}
 
 @BOOK{Martinet2003,
   title = {Perfect lattices in {Euclidean} spaces},
@@ -2379,11 +2645,29 @@ doi={10.1109/ICC.2002.997134} }
 
 @unpublished{McKilliam_mean_dir_est_sq_arc_length2010,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
-title={Direction estimation by minimum square arc length},
+title={Direction estimation by minimum squared arc length},
 note={submitted to IEEE Trans. Sig. Proc.},
 year=2011,
 month={Mar.}
 }
+
+
+@inproceedings{Quinn_snpe_dasp_2011,
+author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+title={Estimating period from sparse, noisy timing data},
+year=2011,
+booktitle=dasp,
+month={July}
+}
+
+@inproceedings{McKilliam_direstcro_dasp_2011,
+author={R. G. McKilliam and B. G. Quinn},
+title={Estimating the circular mean from correlated observations},
+year=2011,
+booktitle=dasp,
+month={July}
+}
+
 
 @unpublished{McKilliam_polyphase_est_icassp_2011,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran},
@@ -2450,6 +2734,7 @@ pages={493-495}
   author = {R. G. McKilliam and D. J. Ryan and I. V. L. Clarkson and I. B. Collings},
   title = {Block Noncoherent Detection of Hexagonal {QAM}},
   journal = {in Proc. Australian Commun. Theory Workshop},
+pages = {65-70},
   year = 2010,
 month = {Feb.}
 }
@@ -2677,7 +2962,7 @@ ISSN={}}
 author={Levanon, N. and Mozeson, E.}, 
 title={Radar Signals}, 
 year={2004}, 
-publisher={Wiley},
+publisher=wiley,
 issn={9780471663089}}
 
 @incollection{Newey1994_handbook_econ_ulln,
@@ -2861,6 +3146,17 @@ file = {peleg_estim_class_polyphase_sig.pdf},
   timestamp = {2008.02.19}
 }
 
+@article{PolyanskiyVerdu_channel_coding_finite_block_length_2010,
+title={Channel Coding Rate in the Finite Blocklength Regime},
+journal=ieeetit,
+author={Y. Polyanskiy and H. V. Poor and S. Verd\'{u}},
+volume=56,
+number=5,
+year=2010,
+month={May}
+}
+
+
 @ARTICLE{Peleg_DPT_1995,
 author={S. Peleg and B. Friedlander},
 title={The discrete polynomial-phase transform},
@@ -2993,7 +3289,7 @@ pages={1231-1234}
 
 @article{Quinn_on_kay_2000,
 author = {B. G. Quinn},
-title = {On Kay's Frequency Estimator},
+title = {On {Kay's} Frequency Estimator},
 journal = {Journal of Time Series Analysis},
 volume = {21},
 number = {6},
