--- a/robby.bib
+++ b/robby.bib
@@ -2,6 +2,8 @@
 
 @comment{{Command line: /usr/bin/bib2bib -oc robbycites -ob robby.bib -c author:"McKilliam" bib.bib}}
 
+@string{dasp = {Defence App. Sig. Proc.}}
+
 @string{ieeetit = {IEEE Trans. Inform. Theory}}
 
 @string{ieeetsp = {IEEE Trans. Sig. Process.}}
@@ -10,10 +12,26 @@
 
 @unpublished{McKilliam_mean_dir_est_sq_arc_length2010,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
-  title = {Direction estimation by minimum square arc length},
+  title = {Direction estimation by minimum squared arc length},
   note = {submitted to IEEE Trans. Sig. Proc.},
   year = 2011,
   month = {Mar.}
+}
+
+@inproceedings{Quinn_snpe_dasp_2011,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  title = {Estimating period from sparse, noisy timing data},
+  year = 2011,
+  booktitle = dasp,
+  month = {July}
+}
+
+@inproceedings{McKilliam_direstcro_dasp_2011,
+  author = {R. G. McKilliam and B. G. Quinn},
+  title = {Estimating the circular mean from correlated observations},
+  year = 2011,
+  booktitle = dasp,
+  month = {July}
 }
 
 @unpublished{McKilliam_polyphase_est_icassp_2011,
@@ -78,6 +96,7 @@
   author = {R. G. McKilliam and D. J. Ryan and I. V. L. Clarkson and I. B. Collings},
   title = {Block Noncoherent Detection of Hexagonal {QAM}},
   journal = {in Proc. Australian Commun. Theory Workshop},
+  pages = {65-70},
   year = 2010,
   month = {Feb.}
 }
