Added to webpage.

--- a/bib.bib
+++ b/bib.bib
@@ -15,7 +15,6 @@ Encoding: Cp1252
 @STRING{cvgip = {Comput. Vision Graph. Image Process.}}
 @STRING{dover = {Dover}}
 @STRING{dsp = {Digital Signal Process.}}
-@STRING{dasp = {Defence App. Sig. Proc.}}
 @STRING{dukemathj = {Duke Math. J.}}
 @STRING{el = {Electron. Lett.}}
 @STRING{gmip = {Graph. Models Image Process.}}
@@ -2651,28 +2650,21 @@ year=2011,
 month={Mar.}
 }
 
-
-@inproceedings{Quinn_snpe_dasp_2011,
-author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-title={Estimating period from sparse, noisy timing data},
-year=2011,
-booktitle=dasp,
-month={July}
-}
-
-@inproceedings{McKilliam_direstcro_dasp_2011,
-author={R. G. McKilliam and B. G. Quinn},
-title={Estimating the circular mean from correlated observations},
-year=2011,
-booktitle=dasp,
-month={July}
-}
-
-
-@unpublished{McKilliam_polyphase_est_icassp_2011,
+{McKilliam_polyphase_est_icassp_2011,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran},
 title={The asymptotic properties of polynomial phase estimation by least squares phase unwrapping},
 note={accepted to {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}, 2011}
+}
+
+@ARTICLE{McKilliam_polyphase_est_icassp_2011,
+  author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran},
+  journal=procicassp,
+title={The asymptotic properties of polynomial phase estimation by least squares phase unwrapping}, 
+year=2011, 
+month={May}, 
+pages={3592 - 3595}, 
+doi={10.1109/ICASSP.2011.5946255}, 
+ISSN={1520-6149},}
 }
 
 
@@ -2688,7 +2680,6 @@ note={accepted to {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}, 2011}
   issn = {1520-6149},
   isbn = {978-1-4244-1483-3},
   doi = {10.1109/TIT.2008.928280},
-  url = {http://www.itee.uq.edu.au/~robertm/papers/ICASSP_SNPE.pdf}
 }
 
 @ARTICLE{McKilliamLinearTimeBlockPSK2009,
