--- a/robby.bib
+++ b/robby.bib
@@ -2,8 +2,6 @@
 
 @comment{{Command line: /usr/bin/bib2bib -oc robbycites -ob robby.bib -c author:"McKilliam" bib.bib}}
 
-@string{dasp = {Defence App. Sig. Proc.}}
-
 @string{ieeetit = {IEEE Trans. Inform. Theory}}
 
 @string{ieeetsp = {IEEE Trans. Sig. Process.}}
@@ -18,26 +16,15 @@
   month = {Mar.}
 }
 
-@inproceedings{Quinn_snpe_dasp_2011,
-  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  title = {Estimating period from sparse, noisy timing data},
-  year = 2011,
-  booktitle = dasp,
-  month = {July}
-}
-
-@inproceedings{McKilliam_direstcro_dasp_2011,
-  author = {R. G. McKilliam and B. G. Quinn},
-  title = {Estimating the circular mean from correlated observations},
-  year = 2011,
-  booktitle = dasp,
-  month = {July}
-}
-
-@unpublished{McKilliam_polyphase_est_icassp_2011,
+@article{McKilliam_polyphase_est_icassp_2011,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran},
+  journal = procicassp,
   title = {The asymptotic properties of polynomial phase estimation by least squares phase unwrapping},
-  note = {accepted to {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}, 2011}
+  year = 2011,
+  month = {May},
+  pages = {3592 - 3595},
+  doi = {10.1109/ICASSP.2011.5946255},
+  issn = {1520-6149}
 }
 
 @article{McKilliam2007,
@@ -51,8 +38,7 @@
   timestamp = {2008.02.28},
   issn = {1520-6149},
   isbn = {978-1-4244-1483-3},
-  doi = {10.1109/TIT.2008.928280},
-  url = {http://www.itee.uq.edu.au/~robertm/papers/ICASSP_SNPE.pdf}
+  doi = {10.1109/TIT.2008.928280}
 }
 
 @article{McKilliamLinearTimeBlockPSK2009,
