--- a/bib.bib
+++ b/bib.bib
@@ -15,6 +15,7 @@ Encoding: Cp1252
 @STRING{cvgip = {Comput. Vision Graph. Image Process.}}
 @STRING{dover = {Dover}}
 @STRING{dsp = {Digital Signal Process.}}
+@STRING{dasp = {Defence App. Sig. Proc.}}
 @STRING{dukemathj = {Duke Math. J.}}
 @STRING{el = {Electron. Lett.}}
 @STRING{gmip = {Graph. Models Image Process.}}
@@ -136,6 +137,7 @@ keywords={Groebner basis;Reed-Solomon code;arbitrary linear Diophantine system;c
 doi={10.1109/TIT.2005.850097}, 
 ISSN={0018-9448},
 }
+
 
 @article {Arnold_mobius_revealed,
     AUTHOR = {A. N. Douglas and J. Rogness},
@@ -517,12 +519,12 @@ ISSN={1536-1276},}
 }
 
 @article{Brunner_nonpari_circ_1994,
-author={L. J. Brunner},
+author={L. J. Brunner and Y. L. Albert},
 year=1994, 
 title={Nonparametric {Bayes} methods for directional data}, 
 journal={Canadian Journal of Statistics},
 volume=22, 
-pages={401–412}
+pages={401-412}
 }
 
 @book{Billingsley1979_probability_and_measure,
@@ -539,6 +541,60 @@ journal={Mathematika},
 volume=25,
 pages={44-56},
 year=1978
+}
+
+@article{Bhattacharya_int_ext_means_2003,
+author={R. N. Bhattacharya and V. Patrangenaru},
+year=2003, 
+title={Large sample theory of intrinsic
+and extrinsic sample means on manifolds I},
+journal={Annals of Statistics},
+vol=31,
+number=1, 
+pages={1-29}
+}
+
+@article{Bhattacharya_int_ext_means_2005,
+author={R. N. Bhattacharya and V. Patrangenaru},
+year=2005, 
+title={Large sample theory of intrinsic
+and extrinsic sample means on manifolds II},
+journal={Annals of Statistics},
+vol=33,
+number=3, 
+pages={1225-1259}
+}
+
+@INPROCEEDINGS{bwhk07a,
+  author = {A. Brun and C. F. Westin and M. Herberthson and H. Knutsson},
+  title = {Intrinsic and Extrinsic Means on the Circle -- a Maximum Likelihood
+	Interpretation},
+  booktitle = procicassp,
+  year = 2007,
+  address = {Honolulu, Hawaii, USA},
+  month = {April},
+  liu_class = {B1},
+  mi_research_area = {cmiv,learning,filters}
+}
+
+
+@article{Pennec_int_st_rm_2006,
+author={X. Pennec},
+year=2006, 
+title={Intrinsic statistics on Riemannian manifolds: Basic tools for
+geometric measurements},
+journal={Journal of Mathematical Imaging and Vision},
+vol=25,
+number=1, 
+pages={127-154}
+}
+
+@article{Ziezold_intrinsic_mean_1977,
+author={H. Ziezold},
+year=1977, 
+title={On expected figures and a strong law of large numbers for random elements in quasi-metric spaces},
+journal={Transactions of the 7th Prague Conference on Information Theory, Random Processes A},
+pages={591-602}
 }
 
 @book{Billingsley1999_convergence_of_probability_measures,
@@ -720,6 +776,19 @@ doi={10.1109/TIT.2005.844069},
 ISSN={0018-9448},
 }
 
+@ARTICLE{Ghez_stability_slotted_aloha_1988, 
+author={S. Ghez and S. Verdu and S.C. Schwartz}, 
+journal={IEEE Transactions on Automatic Control}, 
+title={Stability properties of slotted Aloha with multipacket reception capability}, 
+year=1988, 
+month={Jul.}, 
+volume=33, 
+number=7, 
+pages={640 -649}, 
+keywords={Markov chain;channel backlog;code-division multiplexing;multipacket reception capability;packet switching;packet-arrival rate;random-access;slotted Aloha;stability;Markov processes;data communication systems;multi-access systems;packet switching;protocols;stability;}, 
+doi={10.1109/9.1272}, 
+ISSN={0018-9286},}
+
 @BOOK{cahen_integer-valued_1997,
   title = {Integer-valued Polynomials},
   year = {1997},
@@ -783,6 +852,34 @@ doi = {10.1007/BF00745933}
   month = {Oct.},
   owner = {Robby},
   timestamp = {2007.10.24}
+}
+
+@ARTICLE{Chang_Spherical_Regression1986,
+title = {Spherical Regression},
+journal = {Annals of Statistics},
+volume = {14},
+number = {3},
+pages = {907-924},
+year = {1986},
+author = {T. Chang},
+}
+
+@ARTICLE{MacKenzie_est_orien_rel1957,
+title = {The estimation of an orientation relationship},
+journal = {Acta Cryst.},
+volume = {10},
+pages = {61-62},
+year = {1957},
+author = {J. K. MacKenzie},
+}
+
+@ARTICLE{Stephens_vector_correlation1979,
+title = {Vector correlation},
+journal = {Biometrika},
+volume = {66},
+pages = {41-48},
+year = {1979},
+author = {M. A. Stephens},
 }
 
 @ARTICLE{Chang_VLSI_RS_plagarised,
@@ -980,7 +1077,7 @@ ISSN={0018-9448}, }
 
 @article{ConwaySloane1992_voronoi_lattice_3d_obtuse_superbases,
      jstor_articletype = {primary_article},
-     title = {Low-Dimensional Lattices. VI. Voronoi Reduction of Three-Dimensional Lattices},
+     title = {Low-Dimensional Lattices. {VI}. {Voronoi} Reduction of Three-Dimensional Lattices},
      author = {Conway, J. H. and Sloane, N. J. A.},
      journal = {Proceedings: Mathematical and Physical Sciences},
      jstor_issuetitle = {},
@@ -1106,7 +1203,7 @@ year=1997,
 volume=58,
 number=7,
 pages={501-514},
-journal={Bulletin of volcanology}
+journal={Bulletin of Volcanology}
 }
 
 @phdthesis{Craig_time_ser_circ_thesis1988, 
@@ -1562,10 +1659,10 @@ file = {elkies_lattices_linear_codes.pdf}
   author = {U. Feige and D. Micciancio},
   title = {The inapproximability of lattice and coding problems with preprocessing},
   journal = {Journal of Computer and System Sciences},
-  year = {2004},
-  volume = {69},
+  year = 2004,
+  volume = 69,
   pages = {45-67},
-  number = {1},
+  number = 1,
   month = {Aug},
   abstract = {We prove that the closest vector problem with preprocessing {(CVPP)}
 	is {NP-hard} to approximate within any factor less than . More specifically,
@@ -1596,8 +1693,8 @@ file = {elkies_lattices_linear_codes.pdf}
   author = {E. Fogel and M. Gavish},
   title = {Parameter estimation of quasi-periodic sequences},
   journal = procicassp,
-  year = {1988},
-  volume = {4},
+  year = 1988,
+  volume = 4,
   pages = {2348-2351}
 }
 
@@ -1605,9 +1702,9 @@ file = {elkies_lattices_linear_codes.pdf}
   author = {E. Fogel and M. Gavish},
   title = {Performance evaluation of zero-crossing-based bit synchronizers},
   journal = ieeetc,
-  year = {1989},
-  volume = {37},
-  number = {6},
+  year = 1989,
+  volume = 37,
+  number = 6,
   pages = {663-665},
   month = {Jun.}
 }
@@ -2435,7 +2532,7 @@ pages={645-658}
     }
 
  @article{Chan_more_median_estimators_on_spheres_1993,
-     title = {On Median-Type Estimators of Direction for the von Mises-Fisher Distribution},
+     title = {On Median-Type Estimators of Direction for the {von Mises-Fisher} Distribution},
      author = {Y. M. Chan and X. He},
      journal = {Biometrika},
      volume = 80,
@@ -2489,7 +2586,7 @@ ISSN={1053-587X}
 
 
 @ARTICLE{Mackenthun1994,
-  author = {K.M. Mackenthun},
+  author = {K. M. Mackenthun},
   title = {A fast algorithm for multiple-symbol differential detection of {MPSK}},
   journal = ieeetc,
   year = 1994,
@@ -2642,6 +2739,17 @@ publisher={Kluwer}
   timestamp = {2008.04.21}
 }
 
+@ARTICLE{Mitchell_sampling_rotation_groups,
+author={J. Mitchell},
+title={SAMPLING ROTATION GROUPS BY SUCCESSIVE ORTHOGONAL IMAGES},
+journal= {SIAM Journal on Scientific Computing},
+month={Jan.}, 
+year={2008},
+volume={30},
+issue={1},
+pages={525-547}
+}
+
 @unpublished{McKilliam_mean_dir_est_sq_arc_length2010,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
 title={Direction estimation by minimum squared arc length},
@@ -2650,11 +2758,22 @@ year=2011,
 month={Mar.}
 }
 
-{McKilliam_polyphase_est_icassp_2011,
-author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran},
-title={The asymptotic properties of polynomial phase estimation by least squares phase unwrapping},
-note={accepted to {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}, 2011}
+@inproceedings{Quinn_snpe_dasp_2011,
+author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+title={Estimating period from sparse, noisy timing data},
+year=2011,
+booktitle=dasp,
+month={July}
 }
+
+@inproceedings{McKilliam_direstcro_dasp_2011,
+author={R. G. McKilliam and B. G. Quinn},
+title={Estimating the circular mean from correlated observations},
+year=2011,
+booktitle=dasp,
+month={July}
+}
+
 
 @ARTICLE{McKilliam_polyphase_est_icassp_2011,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran},
@@ -2662,7 +2781,7 @@ note={accepted to {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}, 2011}
 title={The asymptotic properties of polynomial phase estimation by least squares phase unwrapping}, 
 year=2011, 
 month={May}, 
-pages={3592 - 3595}, 
+pages={3592-3595}, 
 doi={10.1109/ICASSP.2011.5946255}, 
 ISSN={1520-6149},}
 }
@@ -3060,7 +3179,7 @@ school = {Queensland University of Technology, Brisbane, Australia},
 
 @phdthesis{Otieno_phd_circ_2002, 
 author = {B. Otieno}, 
-title = {An Alternatice estimate of prefered direction for circular data},
+title = {An alternative estimate of prefered direction for circular data},
 year = 2002,
 month = {July},
 school = {Virginia Polytechnic Institute},
@@ -3163,6 +3282,13 @@ doi={10.1109/78.403349},
 ISSN={1053-587X}, 
 }
 
+@article{Pearson_tables_of_beta_functions,
+author={K. Pearson},
+title={Tables of Incomplete Beta Functions},
+edition={2nd},
+publisher=cup, 
+year={1968}
+}
 
 @ARTICLE{Postol2002LatticeVideoCompression,
 title={Some new lattice quantization algorithms for video compression coding},
@@ -3289,7 +3415,14 @@ year = {2000},
 abstract = {Kay has proposed a technique for estimating the frequency of a complex sinusoid in additive noise, the real and imaginary parts of which are independent and normally distributed with means zero and the same variance. For fixed sample size the estimator achieves the Cramer2013Rao lower bound for unbiased estimators of the frequency in the limit as the signal to noise ratio approaches infinity. It has been noted by Lovell and Williamson, however, that the estimator is biased. It is shown in this paper that under Kay's assumptions the estimator is not consistent (for fixed signal to noise ratio the estimator converges almost surely, as the sample size N increases, to a number that is not the true frequency, no matter how large the signal to noise ratio). A class of distributions for the additive noise is proposed under which the technique is strongly consistent and has the correct order of asymptotic variance, namely N22123, for the case where there is some a priori knowledge concerning the range of the frequency. For this class a normal central limit theorem is developed.}
 }
 
-
+@article{Selling1874,
+author={E. Selling},
+year=1874, 
+title={Ueber die bin\"aren und tern\"aren quadratischen Formen}, 
+journal={J. Reine Angew. Math.}, 
+volume=77, 
+pages={143-229},
+}
 
 @ARTICLE{Quinn_Fernandes_1991,
   author = {B. G. Quinn and J. M. Fernandes},
@@ -3564,6 +3697,19 @@ file = {dan_ryan_thesis.pdf}
    pages = {239-252},
    year = 2006
 }
+
+@ARTICLE{Viterbo_diamond_cutting_1996, 
+author={Viterbo, E. and Biglieri, E.}, 
+journal=ieeetit, 
+title={Computing the Voronoi cell of a lattice: the diamond-cutting algorithm}, 
+year=1996, 
+month={Jan.}, 
+volume=42, 
+number=1, 
+pages={161-171}, 
+keywords={Gaussian channel;Voronoi cell;additive white Gaussian noise channel;computational complexity;density;diamond-cutting algorithm;dimension;dimensionless second moment;error probability;lattice parameters;lattice quantizers;lattice signal constellations;quantizing constant;thickness;Gaussian channels;computational complexity;computational geometry;error statistics;lattice theory;parameter estimation;quantisation (signal);}, 
+doi={10.1109/18.481786}, 
+ISSN={0018-9448},}
 
 
 @article{Ryshkov1979_classical_packings,
